--- a/views/notice/notice_list.html
+++ b/views/notice/notice_list.html
@@ -6,7 +6,7 @@
   <div class="card-body">
     <div>
       <div class="mb-3" ng-show="uid">
-          <button class="btn btn-success btn-sm" ng-click="createBoardForm()">생성</button>  <!--버튼 클릭하면 상태함수 실행-->
+          <button class="btn btn-success btn-sm" ng-click="createNoticeForm()">생성</button>  <!--버튼 클릭하면 상태함수 실행-->
       </div>
       <table class="table table-striped table-bordered">
           <tr>
@@ -19,9 +19,9 @@
           <tr ng-repeat="notice in notices"> <!--tr이 repeat됨. boards라는 배열에서 하나씩 객체를 가져옴 -->
               <td>{{notice.boardno}}</td>
               <td><a ng-click="read(notice.boardno)" href="">{{notice.btitle}}</a></td> <!--click을 했을 때 read라고 하는 상태함수에 번호가 들어가서 실행이 됨. 이것도 컨트롤러에서 만들어야 함-->
-              <td>{{notice.bwriter}}</td>
+              <td>{{notice.userid}}</td>
               <td>{{notice.bdate | date:"yyyy.MM.dd"}}</td>
-              <td>{{notice.bhitcount}}</td>
+              <td>{{notice.bcount}}</td>
           </tr>
              <tr> <!--여긴 페이저 만드는 것-->
                 <td colspan="5" style="text-align: center;">
