--- a/views/communityqna/communityqna_create.html
+++ b/views/communityqna/communityqna_create.html
@@ -1,7 +1,8 @@
 <div class="card-body">
+    <div>
     <div class="form-group">
         <label>제목:</label>
-        <input class="form-control" ng-model="notice.btitle"/>
+        <input class="form-control" ng-model="communityqna.btitle"/>
     </div>
     <div class="form-group">
         <label>작성자:</label>
@@ -9,10 +10,10 @@
     </div>
     <div class="form-group">
         <label>내용:</label>
-        <textarea class="form-control" ng-model="notice.bcontent"></textarea>
+        <textarea class="form-control" ng-model="communityqna.bcontent"></textarea>
     </div>
 
-    <button class="btn btn-primary btn-sm" ng-click="createNotice(notice)">등록</button>
+    <button class="btn btn-primary btn-sm" ng-click="createCqna(communityqna)">등록</button>
     <button class="btn btn-primary btn-sm" ng-click="cancel()">취소</button>        
-
+</div>
 </div>
