--- a/views/product/product_list.html
+++ b/views/product/product_list.html
@@ -1,16 +1,9 @@
 <div class="card">
-  <div class="card-header">
-     product_list.html
-  </div>
-
   <div class="card-body">
     <div>
       <div class="mb-3" ng-show="uid">
           <button class="btn btn-success btn-sm" ng-click="createProductForm()">생성</button>  <!--버튼 클릭하면 상태함수 실행-->
       </div>
-      <select ng-model="categoryVal">
-        <option ng-repeat="category in categoryList">{{category}}</option>
-      </select>
 
       <table class="table table-striped table-bordered">
           <tr>
@@ -21,7 +14,7 @@
               <th>상품가격</th>
               <th>상품활성화</th>
           </tr>
-          <tr ng-repeat="product in products | filter: {category:getCategoryVal()}" > <!--tr이 repeat됨. boards라는 배열에서 하나씩 객체를 가져옴 -->            
+          <tr ng-repeat="product in products" > <!--tr이 repeat됨. boards라는 배열에서 하나씩 객체를 가져옴 -->            
               <td>{{product.productno}}</td>
               <td><a ng-click="read(product.productno)" href="">{{product.pname}}</a></td> <!--click을 했을 때 read라고 하는 상태함수에 번호가 들어가서 실행이 됨. 이것도 컨트롤러에서 만들어야 함-->
               <td>{{product.pcategory}}</td>
