--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,4 @@
 <div class="card">
-    <div class="card-header">
-        home.html
-    </div>
-    <div class="card-body">
         <div ng-show="!uid">
         <form>
             <div class="form-group">
@@ -16,6 +12,95 @@
             <!-- AngularJS는 자동 submit 기능이 없음 -->
             <button class="btn btn-primary" ng-click="login(user)">Login</button>
           </form>
+        </div>
+    </div>
+
+    <div ng-show="uid">
+      <div class="container-fluid">
+        <h1 class="mt-4">Dashboard</h1>
+        <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item active"> 홈페이지 관리 </li>
+        </ol>
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <div class="card text-dark mb-4">
+                    <div class="card-body">총 회원수[활성화]</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card text-dark mb-4">
+                    <div class="card-body">총 리뷰수</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card text-dark mb-4">
+                    <div class="card-body">총 주문수</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card text-dark mb-4">
+                    <div class="card-body">총 상품수</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-area mr-1"></i>
+                        BEST 7 [판매순] <a class="small text-warning stretched-link" href="#">View Details</a>
+                    </div>
+                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                </div>
+            </div>
+            <div class="col-xl-6">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-chart-bar mr-1"></i>
+                        NEW 7 [신상품순] <a class="small text-warning stretched-link" href="#">View Details</a>
+                    </div>
+                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-table mr-1"></i>
+                공지사항
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th width="10%">번호</th>
+                                <th width="40%">제목</th>
+                                <th width="20%">작성자</th>
+                                <th width="20%">작성일</th>
+                            </tr>
+                        </thead>
+                        <tfoot>
+                            
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
