--- a/views/productReview/reviewList.html
+++ b/views/productReview/reviewList.html
@@ -34,7 +34,7 @@
             <td class="align-middle">{{review.boardno}}</td>
             <td class="text-center">
                 <a ng-hide="review.borgimg == null" href="{{battachUrl(review.boardno)}}">
-                    <img src="{{battachUrl(review.boardno)}}" width="100"/>
+                    <img src="{{battachUrl(review.boardno)}}" height="150"/>
                 </a>
             </td>
             <td class="align-middle">{{review.pname}}</td>
