--- a/views/home.html
+++ b/views/home.html
@@ -25,9 +25,9 @@
             <div class="col-xl-3 col-md-6">
                 <div class="card text-dark mb-4">
                   <div class="card-header">총 회원수[활성화]</div>
-                    <div class="card-body"></div>
+                  <div class="card-body text-center"><span style="font-size: 40px;">{{usercount}}</span>개</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <a class="small text-secondary stretched-link" href="/#!/auth">> View Details</a>
                         <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                     <div class="card-header">총 리뷰수</div>
                     <div class="card-body text-center"><span style="font-size: 40px;">{{reviewCount}}</span>개</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <a class="small text-secondary stretched-link" href="/#!/review">> View Details</a>
                         <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                     <div class="card-header">총 주문수</div>
                     <div class="card-body text-center"><span style="font-size: 40px;">{{orderCount}}</span>개</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <a class="small text-secondary stretched-link" href="/#!/ordered_list">> View Details</a>
                         <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -55,9 +55,9 @@
             <div class="col-xl-3 col-md-6">
                 <div class="card text-dark mb-4">
                     <div class="card-header">총 상품수</div>
-                    <div class="card-body"></div>
+                    <div class="card-body text-center"><span style="font-size: 40px;">{{totalRows}}</span>개</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-secondary stretched-link" href="#">> View Details</a>
+                        <a class="small text-secondary stretched-link" href="/#!/product">> View Details</a>
                         <div class="small text-dark"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -68,25 +68,52 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-area mr-1"></i>
-                        BEST 7 [판매순] <a class="small text-warning stretched-link" href="#">View Details</a>
+                        BEST 7 [판매순] <a class="small text-warning stretched-link" href="/#!/product">View Details</a>
                     </div>
-                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="0"></canvas>
+                      <div class="table-responsive">
+                        <table class="table table-bordered">
+                          <tr>                            
+                            <th class="text-center">상품이름</th>
+                            <th class="text-center">판매갯수</th>
+                          </tr>
+                          <tr ng-repeat="bestitem in best">                            
+                            <th class="text-center">{{bestitem.pname}}</th>
+                            <th class="text-center">{{bestitem.psalescount}}</th>
+                          </tr>                          
+                        </table>
+                      </div>
+                    </div>
                 </div>
             </div>
             <div class="col-xl-6">
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-chart-bar mr-1"></i>
-                        NEW 7 [신상품순] <a class="small text-warning stretched-link" href="#">View Details</a>
+                        NEW 7 [신상품순] <a class="small text-warning stretched-link" href="/#!/product">View Details</a>
                     </div>
-                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="0"></canvas>
+                      <div class="table-responsive">
+                        <table class="table table-bordered">
+                          <tr>                            
+                            <th class="text-center">상품이름</th>
+                            <th class="text-center">상품등록일</th>
+                          </tr>
+                          <tr ng-repeat="item in newitem">                            
+                            <th class="text-center">{{item.pname}}</th>
+                            <th class="text-center">{{item.pregisterdate | date:"yyyy.MM.dd"}}</th>
+                          </tr>                          
+                        </table>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
+
         <div class="card mb-4">
           <div class="card-header">
               <i class="fas fa-table mr-1"></i>
-              [베스트 리뷰] TOP 7 <a class="small text-warning stretched-link" href="#"> View Details</a>
+              [베스트 리뷰] TOP 7 <a class="small text-warning stretched-link" href="/#!/review"> View Details</a>
           </div>
           <div class="card-body">
               <div class="table-responsive">
@@ -103,7 +130,7 @@
                           <tr ng-repeat="review in reviews">
                             <td class="text-center">
                                 <a ng-hide="review.borgimg == null" href="{{battachUrl(review.boardno)}}">
-                                    <img src="{{battachUrl(review.boardno)}}" height="150"/>
+                                    <img src="{{battachUrl(review.boardno)}}" height="100"/>
                                 </a>
                             </td>
                             <td class="text-center">{{review.pname}}</td>
@@ -161,7 +188,12 @@
                           </tr>
                       </thead>
                       <tbody>
-                          
+                        <tr ng-repeat="adminlist in adminlists">
+                            <td class="text-center">{{adminlist.userid}}</td>
+                            <td class="text-center">{{adminlist.uname}}</td>
+                            <td class="text-center">{{adminlist.utel}}</td>
+                            <td class="text-center">{{adminlist.uemail}}</td>
+                        </tr> 
                       </tbody>
                   </table>
               </div>
