--- a/views/product/index.html
+++ b/views/product/index.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-      product.html
+      상품관리
   </div>
   <div class="card-body">
       <ng-include src="getView()"/>
