--- a/views/productReview/reviewList.html
+++ b/views/productReview/reviewList.html
@@ -38,7 +38,7 @@
                 </a>
             </td>
             <td class="align-middle">{{review.pname}}</td>
-            <td class="align-middle"><a ng-click="read(review.boardno)" href="">{{review.btitle}}</a></td>
+            <td class="align-middle"  style="cursor: pointer;"><a ng-click="read(review.boardno)"  style="color: rgb(77, 76, 76);">{{review.btitle}}</a></td>
             <td class="align-middle">{{review.userid}}</td>
             <td class="align-middle">{{review.bdate | date:"yyyy.MM.dd"}}</td>
             <td class="align-middle">{{review.bcount}}</td>
