--- a/views/communityqna/index.html
+++ b/views/communityqna/index.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        communityqna.html
+        커뮤니티 QnA
     </div>
     <div class="card-body">
         <ng-include src="getView()"/>
