--- a/views/notice/index.html
+++ b/views/notice/index.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        notice.html
+        공지사항
     </div>
     <div class="card-body">
         <ng-include src="getView()"/>
