--- a/views/home.html
+++ b/views/home.html
@@ -20,9 +20,11 @@
             <img src="./resources/aboutus.png" style="width: 1070px;">
         </div>
 </div>
+   
 
     <div ng-show="uid">
       <div class="container-fluid">
+        <img src="./resources/slide10.PNG" style="width: 1070px;">
         <h1 class="mt-4">Dashboard</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active"> 홈페이지 관리 </li>
